packages/next-swc/crates/core/tests/errors/react-server-components/server-graph/fake-client-entry/input.js
export default function () {
  return null
}

;('use client')
